Fix dialogue spacing

--- a/src/components/dialogue/dialogue.scss
+++ b/src/components/dialogue/dialogue.scss
@@ -2,7 +2,7 @@
   position: fixed;
   box-sizing: border-box;
 
-  top: 0;
+  top: 4.5px;
   left: 0;
   height: 100vh;
   width: 100vw;
